...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:id="@+id/activity_quiz">


    <TextView
        android:id="@+id/textViewQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
